tests/lean/pureCoeIssue.lean.expected.out
pureCoeIssue.lean:6:2: error: type mismatch
  f1
has type
  Nat → IO Unit
but is expected to have type
  EIO IO.Error PUnit
pureCoeIssue.lean:14:2: error: type mismatch
  f2 10
has type
  Nat → IO Unit
but is expected to have type
  EIO IO.Error PUnit
